Kubernetes2/Kube_Project/appdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  vproapp
  labels:
    app:  vproapp
spec:
  selector:
    matchLabels:
      app: vproapp
  replicas: 1
  template:
    metadata:
      labels:
        app:  vproapp
    spec:
      containers:
      - name:  vproapp
        image:  vprocontainers/vprofileapp
        ports:
        - containerPort:  8080
          name:  vproapp-port
