Kubernetes2/Kube_Project/mcdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  vpromc
  labels:
    app:  vpromc
spec:
  selector:
    matchLabels:
      app: vpromc
  replicas: 1
  template:
    metadata:
      labels:
        app:  vpromc
    spec:
      containers:
      - name:  vpromc
        image:  memcached
        ports:
        - containerPort:  11211
          name:  vpromc-port
