Kubernetes2/Kube_Project/rmqdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprormq
spec:
  selector:
    matchLabels:
      app: vprormq
  replicas: 1
  template:
    metadata:
      labels:
        app: vprormq
    spec:
      containers:
      - name: vprormq
        image: rabbitmq
        ports:
        - containerPort: 5672
          name: vprormq-port
