Kubernetes2/Kube_Project/mcservice.yml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  selector:
    app: vpromc
  type: ClusterIP
  ports:
  - port: 11211
    protocol: TCP
    targetPort: vpromc-port
