Kubernetes2/Kube_Project/rmqservice.yml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
  selector:
    app: vprormq
  type: ClusterIP
  ports:
  - port: 5672
    protocol: TCP
    targetPort: vprormq-port
