Kubernetes2/Kube_Project/appingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations: 
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: kube.horpedev.online
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vproapp-service
            port: 
              number: 8080
